--- a/.github/workflows/update-dev-version-date.yml
+++ b/.github/workflows/update-dev-version-date.yml
@@ -91,8 +91,8 @@ jobs:
         if: steps.calculate-version.outputs.was-date-updated == 'true'
         uses: ./.github/actions/version-tools/changelog-updater
         with:
+          action: create-release
           version: Unreleased
-          update-structure-only: true
 
       - name: Create and push branch
         if: steps.calculate-version.outputs.was-date-updated == 'true'
